Fix layout issues

--- a/src/components/common/ProcessCard/ProcessCard.pcss
+++ b/src/components/common/ProcessCard/ProcessCard.pcss
@@ -57,13 +57,12 @@
 
 @media only screen and (min-width: 641px) and (max-width: 1024px) {
 	.process_card {
-		width: 448px;
+		width: 100%;
 	}
 }
 
 @media only screen and (max-width: 640px) {
 	.process_card {
-		max-width: 100%;
 		width: 100%;
 	}
 }
