--- a/src/components/common/ProcessCard/ProcessContent/ProcessContent.pcss
+++ b/src/components/common/ProcessCard/ProcessContent/ProcessContent.pcss
@@ -1,3 +1,7 @@
+.process_content {
+	width: 100%;
+}
+
 .approval_content,
 .failure_content,
 .success_content {
